fix(windows): make long menus scroll in Configuration
Fixes #6098.

If the list of languages is too long to fit, the menu now dynamically
adds a scroll bar.

As a bonus:
* The language names are sorted (non-Latin scripts at bottom for now)
* `nmake install` works again (in kmshell, presence of `install` folder
  was confusing it)

--- a/windows/src/desktop/kmshell/xml/menu.css
+++ b/windows/src/desktop/kmshell/xml/menu.css
@@ -14,6 +14,7 @@
   background-position: 0 0;
   width: 220px;
   z-index: 100;
+  box-sizing: border-box;
 }
 
 .menuitem
